src/objects/Error_Log__c.object
<CustomObject>
    <description>This object contains the error logs that are generated on the portal.</description>
    <fields>
        <fullName>Class__c</fullName>
        <description>This field contains the class name in which the error occurred.</description>
        <label>Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <description>This field contains the component on which the error occurred.</description>
        <label>Component</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Description__c</fullName>
        <description>This field contains the kind of error that occurred and the description</description>
        <label>Error Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Detail__c</fullName>
        <description>This field contains the stack trace.</description>
        <label>Error Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Record_Id__c</fullName>
        <description>This field contains the id of the record for which the error occurred.</description>
        <label>Error Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Severity__c</fullName>
        <description>This field contains the level of severity for the error</description>
        <label>Error Severity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <description>This field contains the event on which the error occurred.</description>
        <label>Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SObject__c</fullName>
        <description>This field contains the name of the sObject for which the error occurred.</description>
        <label>SObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <description>This field contains the user id for which the error occurred.</description>
        <label>User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Component__c</columns>
        <columns>Error_Description__c</columns>
        <columns>Error_Detail__c</columns>
        <columns>Error_Record_Id__c</columns>
        <columns>Error_Severity__c</columns>
        <columns>SObject__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>dev_to_uat_error_logs</fullName>
        <columns>NAME</columns>
        <columns>Error_Description__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Error_Detail__c</columns>
        <columns>Error_Record_Id__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Event__c</columns>
        <filterScope>Everything</filterScope>
        <label>dev to uat error logs</label>
    </listViews>
    <nameField>
        <displayFormat>{YY}{MM}{DD}-{000000}</displayFormat>
        <label>Error Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <recordTypes>
        <fullName>Business_Rules_Engine</fullName>
        <active>true</active>
        <description>Error from Business Rules Engine Framework</description>
        <label>Business Rules Engine</label>
    </recordTypes>
    <recordTypes>
        <fullName>Error_Logger_Record_Type</fullName>
        <active>true</active>
        <label>Error Logger Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>FCVS_Integration</fullName>
        <active>true</active>
        <label>FCVS Integration</label>
    </recordTypes>
    <recordTypes>
        <fullName>NCCPA_integration</fullName>
        <active>true</active>
        <description>This record type is used to log errors related to NCCPA Integration.</description>
        <label>NCCPA integration</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>